# CLI-Coding-Harness

./: .gitignore  LICENCE  README.md  code-gen.txt  pyproject.toml
harness/: README.md  __main__.py
harness/agents/: AgentContextPacket.schema.json  ProjectManagerAgent.schema.json  adversary.agent.json  adversary.toml  agent_context_compiler.py  agent_context_packet.py  agent_contract.py  archive_manager.agent copy.json  archivist.toml  implementer.toml  planner.toml  project-manager.agent.json  project-manager.toml  project_manager.agent.json  project_manager_agent.py  reviewer.toml  schema_generator.py
harness/canon/: bridge-schema.md  type-system-operational.md
harness/context/: context_compiler.py
harness/contracts/: ProjectManagerReport.schema.json  __init__.py  project_manager.py  project_manager_report.example.json  project_manager_report.json  project_manager_report.py  project_manager_report.schema.json  project_manager_report_extractor.py  project_manager_report_validation.py  schema_generator.py  task_brief.schema.json
harness/implementations/: implementation_plan.py  (+3 more)
pydantic/: code-gen.py  code-gen.txt  code_gen.py  schema_generator.py
tests/: test_agent_callers.py  test_api_call_ledger.py  test_model_resolution.py  test_openai_call_runner.py  test_openai_response_payload_compiler.py  test_package_route.py  test_pre_call_packet_assembly.py  test_project_manager_report_extractor.py  test_project_manager_report_validation.py  test_project_manager_report_validation_artifact.py  test_repo_snapshot_compiler.py  test_static_context_packet_compiler.py
(+129 files in other folders)
