[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-agent-cli-harness"
version = "0.1.0"
description = "Local CLI harness for OpenAI Agents SDK coding-agent orchestration."
requires-python = ">=3.10"
dependencies = [
  "openai-agents>=0.17.4,<0.18",
  "pydantic>=2,<3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["harness*"]
namespaces = true
