[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-geometry-cli-harness"
version = "0.1.0"
description = "Local CLI agent harness for coding orchestration."
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2",
  "openai>=2",
  "jsonschema>=4.0,<5",
]

[project.optional-dependencies]
dev = [
  "datamodel-code-generator",
  "jsonschema",
  "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["harness*"]
namespaces = true
